# SKLinkChat

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README 2.md  README.md  REDESIGN_PLAN.md  SECURITY.md  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml  fix_claude.sh
server-py/: .gitignore  Dockerfile  README.md  dev.sqlite3  pyproject.toml  pyrightconfig.json
server-py/alembic/: env.py
server-py/alembic/versions/: 0001_auth_foundation.py  0002_post_auth_hardening.py  0003_admin_governance_foundation.py  0003_password_reset_tokens.py  0004_account_admin_flag.py  0005_account_restriction_source_report.py  0006_account_short_id.py  0007_verification_code.py  0008_account_gender.py  0009_account_display_name_unique.py  0010_account_stack_user_id.py
server-py/app/application/account/: service.py
server-py/app/application/admin/: service.py
server-py/app/application/auth/: security.py  service.py
server-py/app/application/chat/: __init__.py  access_service.py  report_service.py  runtime_service.py  use_cases.py
server-py/app/application/platform/: __init__.py  ports.py  services.py  use_cases.py
server-py/app/bootstrap/: app_factory.py  container.py  lifespan.py
server-py/app/domain/chat/: __init__.py  (+1 more)
server-py/app/infrastructure/: email_sender.py  feature_flags.py  geetest_verifier.py  moderation_gateway.py  permission_gate.py  readiness_probe.py  stack_auth_client.py  turnstile_verifier.py
server-py/app/shared/: config.py  errors.py  logging.py  protocol.py
server-py/tests/: conftest.py  fakes.py  postgres_utils.py  test_account.py  test_admin.py  test_auth.py  test_chat_persistence.py  test_config.py  test_email_sender.py  test_errors.py  test_geetest_verifier.py  test_health.py  test_migrations.py  test_presence.py  test_protocol.py  test_reporting.py  test_retention.py  test_session.py  test_turnstile_verifier.py  test_websocket.py
(+229 files in other folders)
